2006-01-23  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::fixup_after_fork): Reset
	inheritance for duplicated socket.

2006-01-20  Christopher Faylor  <cgf@timesys.com>

	* include/cygwin/version.h: Bump API minor number to 151.
	* dir.cc (__opendir_with_d_ino): New function.
	(opendir): Set flag if we should be calculating inodes.
	(readdir_worker): Calculate d_ino by calling stat if the user has asked
	for it.
	(seekdir64): Maintain all persistent flag settings.
	* fhandler.h (dirent_states): Add dirent_set_d_ino.
	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Reflect changes
	to dirent structure.
	* fhandler_virtual.cc (fhandler_virtual::opendir): Ditto.
	* include/sys/dirent.h (struct dirent): Coalesce two similar
	structures.  Remove all shreds of the apparently highly confusing
	references to inodes.  Add support for calculating a real inode if
	__USE_EXPENSIVE_CYGWIN_D_INO is defined.

2006-01-20  Christopher Faylor  <cgf@timesys.com>

	* include/sys/dirent.h: Add comments for people who are REALLY confused
	about whether they should be using something called __invalid_d_ino or
	not.

2006-01-20  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::prepare): Fix debug output.
	(fhandler_socket::release): Add debug output for WSAEventSelect failure.
	(fhandler_socket::ioctl): Always cancel WSAEventSelect before switching
	to blocking mode.  Only set nonblocking flag if ioctlsocket call
	succeeded.  Only print new socket state if ioctlsocket call succeeded.

2006-01-19  Christopher Faylor  <cgf@timesys.com>

	* fhandler_disk_file.cc (fhandler_disk_file::opendir): Check posix path
	for root rather than windows path.

2006-01-19  Christopher Faylor  <cgf@timesys.com>

	* dir.cc (readdir_worker): Fill in invalid fields with -1.  Accommodate
	name change from __ino32 to __invalid_ino32.
	* include/sys/dirent.h (__invalid_ino32): Rename from __ino32.  Don't
	define unused d_type macros.
